--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # Environment variables
-.env
+.env*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 # Database files
 *.db
