--- a/package.json
+++ b/package.json
@@ -20,7 +20,19 @@
   ],
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo 'No tests specified' && exit 0",
+    "lint": "echo 'No linting specified' && exit 0",
+    "audit": "npm audit --audit-level=moderate",
+    "security-check": "npm audit && npm audit --json",
+    "build": "echo 'No build step required for Node.js app'",
+    "docker:build": "docker build -t shellpoint:test .",
+    "docker:test": "docker run --rm -e JWT_SECRET=test-key -p 8080:8080 shellpoint:test",
+    "docker:prod": "docker build -f Dockerfile -t cognitiolabs/shellpoint:latest .",
+    "version-check": "node -e \"console.log(require('./package.json').version)\"",
+    "health-check": "curl -f http://localhost:8080/health || exit 1",
+    "pre-deploy": "npm audit && npm run health-check",
+    "start:prod": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
